# freebox-automute-tv-ads

./: .gitignore  LICENSE  Makefile  README.md  STRUCTURE.md  pyproject.toml  requirements.txt  run.sh
scripts/: channel_mapper.py
src/freetv/: __init__.py  __main__.py  config.py  models.py
src/freetv/core/: client.py  engine.py  oqee.py
src/freetv/ui/: console.py  display.py
tests/: test_basic.py  test_demute_fix.py  test_tv_status.py
