[project]
name = "freebox-automute"
version = "1.0.0"
description = "Programme d'auto-mute pour Freebox pendant les publicités"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9.0",
    "freebox-api>=1.1.0",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
